@@ -22,6 +22,8 @@ import java.security.Permission;
 
 import java.util.Arrays;
 import java.util.Objects;
+import java.util.concurrent.Callable;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
 
 import org.junit.Assert;
@@ -41,6 +43,7 @@ public class ReflectionUtilTest {
 			CodeCoverageAssertor.INSTANCE, LiferayUnitTestRule.INSTANCE);
 
 	@NewEnv(type = NewEnv.Type.JVM)
+	@NewEnv.JVMArgsLine("-Djava.security.manager=allow")
 	@Test
 	public void testClassInitializationFailure() throws Exception {
 		SecurityException securityException = new SecurityException();
@@ -71,9 +74,281 @@ public class ReflectionUtilTest {
 		}
 	}
 
+	@NewEnv(type = NewEnv.Type.JVM)
+	@NewEnv.JVMArgsLine("-Djava.security.manager=allow")
 	@Test
-	public void testConstructor() {
+	public void testClassInitializationFallback() throws Exception {
+		_runInFallbackMode(
+			() -> {
+				Class.forName(ReflectionUtil.class.getName());
+
+				Field field = ReflectionUtil.class.getDeclaredField(
+					"_fetchDeclaredFieldMethodHandle");
+
+				field.setAccessible(true);
+
+				Assert.assertNull(field.get(null));
+
+				field = ReflectionUtil.class.getDeclaredField(
+					"_fetchDeclaredMethodMethodHandle");
+
+				field.setAccessible(true);
+
+				Assert.assertNull(field.get(null));
+
+				field = ReflectionUtil.class.getDeclaredField(
+					"_fetchFieldMethodHandle");
+
+				field.setAccessible(true);
+
+				Assert.assertNull(field.get(null));
+
+				field = ReflectionUtil.class.getDeclaredField(
+					"_fetchMethodMethodHandle");
+
+				field.setAccessible(true);
+
+				Assert.assertNull(field.get(null));
+
+				return null;
+			});
+	}
+
+	@Test
+	public void testConstructor() throws Exception {
 		new ReflectionUtil();
+
+		Field field = ReflectionUtil.class.getDeclaredField(
+			"_fetchDeclaredFieldMethodHandle");
+
+		field.setAccessible(true);
+
+		Assert.assertNotNull(field.get(null));
+
+		field = ReflectionUtil.class.getDeclaredField(
+			"_fetchDeclaredMethodMethodHandle");
+
+		field.setAccessible(true);
+
+		Assert.assertNotNull(field.get(null));
+
+		field = ReflectionUtil.class.getDeclaredField(
+			"_fetchFieldMethodHandle");
+
+		field.setAccessible(true);
+
+		Assert.assertNotNull(field.get(null));
+
+		field = ReflectionUtil.class.getDeclaredField(
+			"_fetchMethodMethodHandle");
+
+		field.setAccessible(true);
+
+		Assert.assertNotNull(field.get(null));
+	}
+
+	@Test
+	public void testFetchDeclaredField() throws Exception {
+		Field staticField = ReflectionUtil.fetchDeclaredField(
+			TestClass.class, "_privateStaticFinalObject");
+
+		Assert.assertTrue(staticField.isAccessible());
+		Assert.assertSame(
+			TestClass._privateStaticFinalObject, staticField.get(null));
+
+		TestClass testClass = new TestClass();
+
+		Field field = ReflectionUtil.fetchDeclaredField(
+			TestClass.class, "_privateFinalObject");
+
+		Assert.assertTrue(field.isAccessible());
+		Assert.assertTrue(Modifier.isFinal(field.getModifiers()));
+		Assert.assertSame(testClass._privateFinalObject, field.get(testClass));
+
+		Assert.assertNull(
+			ReflectionUtil.fetchDeclaredField(
+				TestClass.class, "_notExistField"));
+
+		try {
+			ReflectionUtil.fetchDeclaredField(null, "_notExistField");
+
+			Assert.fail();
+		}
+		catch (NullPointerException nullPointerException) {
+		}
+	}
+
+	@NewEnv(type = NewEnv.Type.JVM)
+	@NewEnv.JVMArgsLine("-Djava.security.manager=allow")
+	@Test
+	public void testFetchDeclaredFieldFallback() throws Exception {
+		_runInFallbackMode(
+			() -> {
+				Field staticField = ReflectionUtil.fetchDeclaredField(
+					TestClass.class, "_privateStaticFinalObject");
+
+				Assert.assertTrue(staticField.isAccessible());
+				Assert.assertSame(
+					TestClass._privateStaticFinalObject, staticField.get(null));
+
+				TestClass testClass = new TestClass();
+
+				Field field = ReflectionUtil.fetchDeclaredField(
+					TestClass.class, "_privateFinalObject");
+
+				Assert.assertTrue(field.isAccessible());
+				Assert.assertTrue(Modifier.isFinal(field.getModifiers()));
+				Assert.assertSame(
+					testClass._privateFinalObject, field.get(testClass));
+
+				Assert.assertNull(
+					ReflectionUtil.fetchDeclaredField(
+						TestClass.class, "_notExistField"));
+
+				return null;
+			});
+	}
+
+	@Test
+	public void testFetchDeclaredMethod() throws Exception {
+		Method method = ReflectionUtil.fetchDeclaredMethod(
+			TestClass.class, "_getPrivateStaticObject");
+
+		Assert.assertTrue(method.isAccessible());
+		Assert.assertSame(TestClass._privateStaticObject, method.invoke(null));
+
+		Assert.assertNull(
+			ReflectionUtil.fetchDeclaredMethod(
+				TestClass.class, "_notExistMethod"));
+
+		try {
+			ReflectionUtil.fetchDeclaredMethod(null, "_notExistMethod");
+
+			Assert.fail();
+		}
+		catch (NullPointerException nullPointerException) {
+		}
+	}
+
+	@NewEnv(type = NewEnv.Type.JVM)
+	@NewEnv.JVMArgsLine("-Djava.security.manager=allow")
+	@Test
+	public void testFetchDeclaredMethodFallback() throws Exception {
+		_runInFallbackMode(
+			() -> {
+				Method method = ReflectionUtil.fetchDeclaredMethod(
+					TestClass.class, "_getPrivateStaticObject");
+
+				Assert.assertTrue(method.isAccessible());
+				Assert.assertSame(
+					TestClass._privateStaticObject, method.invoke(null));
+
+				Assert.assertNull(
+					ReflectionUtil.fetchDeclaredMethod(
+						TestClass.class, "_notExistMethod"));
+
+				return null;
+			});
+	}
+
+	@Test
+	public void testFetchField() throws Exception {
+		Field staticField = ReflectionUtil.fetchField(
+			TestClass.class, "publicStaticObject");
+
+		Assert.assertTrue(staticField.isAccessible());
+		Assert.assertSame(TestClass.publicStaticObject, staticField.get(null));
+
+		TestClass testClass = new TestClass();
+
+		Field field = ReflectionUtil.fetchField(
+			TestClass.class, "publicObject");
+
+		Assert.assertTrue(field.isAccessible());
+		Assert.assertTrue(Modifier.isFinal(field.getModifiers()));
+		Assert.assertSame(testClass.publicObject, field.get(testClass));
+
+		Assert.assertNull(
+			ReflectionUtil.fetchField(TestClass.class, "_notExistField"));
+
+		try {
+			ReflectionUtil.fetchField(null, "_notExistField");
+
+			Assert.fail();
+		}
+		catch (NullPointerException nullPointerException) {
+		}
+	}
+
+	@NewEnv(type = NewEnv.Type.JVM)
+	@NewEnv.JVMArgsLine("-Djava.security.manager=allow")
+	@Test
+	public void testFetchFieldFallback() throws Exception {
+		_runInFallbackMode(
+			() -> {
+				Field staticField = ReflectionUtil.fetchField(
+					TestClass.class, "publicStaticObject");
+
+				Assert.assertTrue(staticField.isAccessible());
+				Assert.assertSame(
+					TestClass.publicStaticObject, staticField.get(null));
+
+				TestClass testClass = new TestClass();
+
+				Field field = ReflectionUtil.fetchField(
+					TestClass.class, "publicObject");
+
+				Assert.assertTrue(field.isAccessible());
+				Assert.assertTrue(Modifier.isFinal(field.getModifiers()));
+				Assert.assertSame(testClass.publicObject, field.get(testClass));
+
+				Assert.assertNull(
+					ReflectionUtil.fetchField(
+						TestClass.class, "_notExistField"));
+
+				return null;
+			});
+	}
+
+	@Test
+	public void testFetchMethod() throws Exception {
+		Method method = ReflectionUtil.fetchMethod(
+			TestClass.class, "getPrivateStaticObject");
+
+		Assert.assertTrue(method.isAccessible());
+		Assert.assertSame(TestClass._privateStaticObject, method.invoke(null));
+
+		Assert.assertNull(
+			ReflectionUtil.fetchMethod(TestClass.class, "_notExistMethod"));
+
+		try {
+			ReflectionUtil.fetchMethod(null, "_notExistMethod");
+
+			Assert.fail();
+		}
+		catch (NullPointerException nullPointerException) {
+		}
+	}
+
+	@NewEnv(type = NewEnv.Type.JVM)
+	@NewEnv.JVMArgsLine("-Djava.security.manager=allow")
+	@Test
+	public void testFetchMethodFallback() throws Exception {
+		_runInFallbackMode(
+			() -> {
+				Method method = ReflectionUtil.fetchMethod(
+					TestClass.class, "getPrivateStaticObject");
+
+				Assert.assertTrue(method.isAccessible());
+				Assert.assertSame(
+					TestClass._privateStaticObject, method.invoke(null));
+
+				Assert.assertNull(
+					ReflectionUtil.fetchMethod(
+						TestClass.class, "_notExistMethod"));
+
+				return null;
+			});
 	}
 
 	@Test
@@ -167,7 +442,41 @@ public class ReflectionUtilTest {
 		}
 	}
 
+	private void _runInFallbackMode(Callable<Void> callable) throws Exception {
+		Thread currentThread = Thread.currentThread();
+
+		AtomicInteger counter = new AtomicInteger();
+
+		try (SwappableSecurityManager swappableSecurityManager =
+				new SwappableSecurityManager() {
+
+					@Override
+					public void checkPermission(Permission permission) {
+						if ((currentThread == Thread.currentThread()) &&
+							Objects.equals(
+								permission.getName(),
+								"accessDeclaredMembers") &&
+							(counter.incrementAndGet() == 2)) {
+
+							throw new SecurityException();
+						}
+					}
+
+				}) {
+
+			swappableSecurityManager.install();
+
+			callable.call();
+		}
+	}
+
 	private static class TestClass implements TestInterface {
+
+		public static final Object publicStaticObject = new Object();
+
+		public static Object getPrivateStaticObject() {
+			return _privateStaticObject;
+		}
 
 		public static void setPrivateStaticObject(Object privateStaticObject) {
 			_privateStaticObject = privateStaticObject;
@@ -176,6 +485,8 @@ public class ReflectionUtilTest {
 		public void setPrivateObject(Object privateObject) {
 			_privateObject = privateObject;
 		}
+
+		public final Object publicObject = new Object();
 
 		@SuppressWarnings("unused")
 		private static Object _getPrivateStaticObject() {
